# extra-datascience-tools

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: test-package.yml
docs/: rtd_requirements.txt
docs/source/: about.md  conf.py  index.md  installation.md
docs/source/notebooks/: tutorial.ipynb
src/extra_ds_tools/: format.py
src/extra_ds_tools/decorators/: func_decorators.py
src/extra_ds_tools/ml/sklearn/: meta_estimators.py  model_selection.py
src/extra_ds_tools/plots/: eda.py  format.py
src/extra_ds_tools/transformers/: numeric.py
tests/: test_dummy.py
tests/test_decorators/test_func_decorators/: test_timeit_arg_info_dec.py
tests/test_format/: test_arg_info.py  test_args_and_kwargs_repr.py  test_class_as_str_repr.py  test_make_empty_value_printable.py  test_truncated_value.py
tests/test_ml/: conftest.py
tests/test_ml/test_meta_estimators/: test_EstimatorSwitch.py
tests/test_ml/test_model_selection/: conftest.py  test_filter_tried_params.py
tests/test_plots/: conftest.py
tests/test_plots/test_eda/: test_create_distribution_plots.py  test_stripboxplot.py  test_try_diff_distribution_plots.py
tests/test_plots/test_format/: test_add_counts_to_xticks.py  test_add_counts_to_yticks.py
tests/test_transformers/test_numeric/: test_apply_different_numeric_transformations.py
