[tool.poetry]
name = "extra-datascience-tools"
version = "0.1.0"
description = ""
authors = ["Tomer Gabay <tomergabay@Admins-MacBook-Pro.local>"]
readme = "README.md"
packages = [{include = "extra_datascience_tools", from = "src"}]

[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
