[tool.poetry]
name = "extra-datascience-tools"
version = "0.4.2"
description = "Python package which offers additional tools for data scientists."
license = "MIT"
homepage = "https://extra-datascience-tools.readthedocs.io/en/latest/index.html"
documentation = "https://extra-datascience-tools.readthedocs.io/en/latest/index.html"
repository = "https://github.com/sTomerG/extra-datascience-tools"
keywords = ["data science", "python",  "plots", "visualizations", "decorators", "ml", "machine learning"]
authors = ["Tomer Gabay <tomergabay001@gmail.com>"]
readme = "README.md"
packages = [{include = "extra_ds_tools", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
seaborn = "^0.12.0"
numpy = "^1.23.3"
tabulate = "^0.8.10"
scipy = "^1.9.2"
matplotlib = "^3.5.3"
scikit-learn = "^1.1.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"
black = "^22.8.0"
hypothesis = "^6.56.0"
isort = "^5.10.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.0"
pre-commit = "^2.20.0"


[tool.poetry.group.doc.dependencies]
Sphinx = "^5.2.2"
myst-parser = "^0.18.1"
sphinx-autobuild = "^2021.3.14"
nbsphinx = "^0.8.9"
sphinx-autoapi = "^2.0.0"
sphinxcontrib-napoleon = "^0.7"
sphinx-rtd-theme = "^1.0.0"
ipython = "^8.6.0"

[tool.black]
line-length = 79
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''

[tool.isort]
profile = "black"
line_length = 79
known_third_party = ["extra_ds_tools", "hypothesis", "matplotlib", "numpy", "pandas", "pytest", "scipy", "seaborn", "sklearn", "tabulate"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
